--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   shared_preferences: ^2.5.3
   crypto: ^3.0.3
   image: ^4.1.3
-  path_provider: ^2.1.2
+  path_provider: ^2.1.5
   pull_to_refresh: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,7 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.4.1
   intl: ^0.18.1
-  url_launcher: ^6.2.5
+  url_launcher: ^6.3.1
   fl_chart: ^0.66.2
   permission_handler: ^11.3.0
   image_picker: ^1.0.7
@@ -54,6 +54,13 @@ dependencies:
   archive: ^4.0.5
   clipboard: ^0.1.3
   device_info_plus: ^11.3.0
+  socks5_proxy: ^2.0.0
+  connectivity_plus: ^6.1.3
+  proxy_manager: ^0.0.3
+  file_picker: ^10.0.0
+  share_plus: ^10.1.4
+  flutter_image_gallery_saver: 0.0.2
+
 
 dev_dependencies:
   flutter_test:
